Fix/1209 select option text wrap (#1219)

--- a/packages/components/select/src/select-option.scss
+++ b/packages/components/select/src/select-option.scss
@@ -11,9 +11,12 @@ $sizes: md, lg;
   cursor: pointer;
   display: block;
   font: var(--_font);
+  hyphens: auto;
+  overflow-wrap: break-word;
   padding-block: var(--_padding-block);
   padding-inline: var(--_padding-inline);
   position: relative;
+  word-break: auto-phrase;
 }
 
 @each $size in $sizes {
